--- a/style/components/header.css
+++ b/style/components/header.css
@@ -17,7 +17,7 @@ h1 {
 }
 
 h1 span {
-    font: 24px Ubuntu-Light;
+    font: 20px Ubuntu-Light;
     color: #b4b4b4;
     position: absolute;
     bottom: -62%;
@@ -26,7 +26,7 @@ h1 span {
 
 .lamp {
     width: 17.5%;
-    margin-top: 5%;
+    margin-top: 7%;
     margin-left: -1%;
     opacity: 70%;
     min-width: 100px;
@@ -35,7 +35,7 @@ h1 span {
 .caption {
     font-size: 23px;
     color: #b7a075;
-    margin: 0.9% 0 9.2%;
+    margin: 1.7% 0 10%;
     letter-spacing: -0.7px;
 }
 
@@ -63,7 +63,10 @@ h1 span {
     h1 {
         font-size: 47px;
     }
-
+     h1 span{
+         font-size: 23px;
+         right: -20%;
+     }
     .caption {
         font-size: 3.5vw;
     }
@@ -80,78 +83,8 @@ h1 span {
 @media screen and (min-width: 1200px) {
     .caption {
         font-weight: 500;
-        font-size: 42px;
+        font-size: 45px;
     }
 }
 
-@media only screen /*and (min-width: 992px) */
-and (max-width: 1200px) {
 
-
-    h1 span {
-        font-size: 22px;
-    }
-
-    .lamp img {
-        width: 70%;
-    }
-
-
-}
-
-@media only screen /*and (min-width: 768px) */
-and (max-width: 992px) {
-
-
-    h1 span {
-        font-size: 20px;
-    }
-
-    .lamp img {
-        width: 60%;
-    }
-
-
-}
-
-@media only screen/* and (min-width: 576px) */
-and (max-width: 768px) {
-
-
-    h1 span {
-        font-size: 18px;
-    }
-
-    .lamp img {
-        width: 45%;
-    }
-
-
-}
-
-@media only screen /*and (min-width: 320px)*/
-and (max-width: 576px) {
-
-
-    h1 span {
-        font-size: 16px;
-    }
-
-    .lamp img {
-        width: 39%;
-    }
-
-
-}
-
-@media only screen and (max-width: 320px) {
-    h1 span {
-        font-size: 16px;
-    }
-
-    .lamp img {
-        width: 39%;
-    }
-
-
-}
