--- a/style/components/services.css
+++ b/style/components/services.css
@@ -8,6 +8,11 @@
     margin-top: 30px;
 }
 
+.right-services{
+    display: flex;
+    flex-direction: column;
+}
+
 .name-list {
     color: #b69b67;
     font-size: 25px;
@@ -39,11 +44,13 @@
 }
 
 .services-text {
+    align-self: center;
     font-size: 17px;
     margin-top: 20px;
     letter-spacing: -0.435px;
     line-height: 19px;
     text-align: justify;
+    max-width: 400px;
 }
 
 .services-text a {
@@ -52,9 +59,9 @@
 }
 
 .laptop {
-    width: 74%;
-    margin-left: 13.5%;
-    margin-top: 7%;
+    width: 78%;
+    margin-left: 5.5%;
+    margin-top: 9%;
     opacity: 50%;
 }
 
@@ -79,16 +86,14 @@
 
     .left-services {
         padding: 0 15px;
-        width: 300px;
+        width: 405px;
     }
 
     .services-text {
         margin-top: 6%;
-        margin-left: 7%;
-        width: 400px;
     }
     .list li{
-        margin-bottom: 16%;
+        margin-bottom: 14%;
     }
 }
 
@@ -102,11 +107,14 @@
     }
     .name-list{
         font-size: 45px;
-        margin-top: 6%;
-        margin-bottom: 14%;
+        margin-top: 4%;
+        margin-bottom: 12%;
     }
     .list{
         font-size: 24px;
+    }
+    .services-text {
+        align-self: flex-start;
     }
 }
 
