--- a/style/style.css
+++ b/style/style.css
@@ -2,4 +2,5 @@
 @import "components/header.css";
 @import "components/services.css";
 @import "components/fonts.css";
+@import "components/porfolio.css";
 
