--- a/style/components/common.css
+++ b/style/components/common.css
@@ -10,7 +10,7 @@ body{
     background: #2C2C2C;
     font: 24px Ubuntu-Light;
     color: #b4b4b4;
-    padding: 0 10%;
+    padding: 0 10% 100px;
 }
 
 main h2 {
