--- a/style/style.css
+++ b/style/style.css
@@ -3,4 +3,6 @@
 @import "components/services.css";
 @import "components/fonts.css";
 @import "components/porfolio.css";
+@import "components/menu.css";
+
 
