--- a/style/components/menu.css
+++ b/style/components/menu.css
@@ -1,11 +1,12 @@
 #menu-toggle{
+    /*return position absolute and correct your indents*/
     width: 50px;
     height: 50px;
     border: 1px solid #454545;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    margin-left: auto;
+    margin-left: auto; /*use align-self instead*/
     margin-top: 20%;
 }
 
@@ -16,16 +17,17 @@
 }
 
 #menu-toggle span{
-    align-self: center;
+    align-self: center; /*align spans in parent*/
+    /*use here transition*/
 }
 
 #menu-toggle:hover span:nth-of-type(2n+1){
-    transition: transform 2s ease ;
+    transition: transform 2s ease; /*the same value below*/
     transform: translate(25px, 0px);
 }
 
 #menu-toggle:hover span:nth-of-type(2n){
-    transition: transform 2s ease ;
+    transition: transform 2s ease; /*the same value above*/
     transform: translate(-15px, 0px);
 }
 
@@ -39,7 +41,7 @@
     #menu-toggle{
         width: 60px;
         height: 60px;
-        margin-left: 92%;
+        margin-left: 92%; /*must be positioned by right side*/
         margin-top: 7.5%;
     }
 }
