--- a/style/components/menu.css
+++ b/style/components/menu.css
@@ -1,47 +1,41 @@
-#menu-toggle{
-    /*return position absolute and correct your indents*/
+#navigation{
     width: 50px;
     height: 50px;
     border: 1px solid #454545;
     display: flex;
     flex-direction: column;
+    align-self: flex-end;
+    top: 44.5%;
+    position: absolute;
+}
+
+.sandwich{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-evenly;
-    margin-left: auto; /*use align-self instead*/
-    margin-top: 20%;
+    width: 50px;
+    height: 50px;
 }
 
-#menu-toggle span {
-    width: 80%;
-    height: 2px;
+#navigation .sandwich span{
+    width: 60%;
+    height: 1.25px;
     background:#b4b4b4;
+    transition: transform 2s ease;
 }
 
-#menu-toggle span{
-    align-self: center; /*align spans in parent*/
-    /*use here transition*/
-}
-
-#menu-toggle:hover span:nth-of-type(2n+1){
-    transition: transform 2s ease; /*the same value below*/
+#navigation:hover span:nth-of-type(2n+1){
     transform: translate(25px, 0px);
 }
 
-#menu-toggle:hover span:nth-of-type(2n){
-    transition: transform 2s ease; /*the same value above*/
-    transform: translate(-15px, 0px);
-}
-
-@media screen and (min-width: 768px) {
-    #menu-toggle{
-        margin-top: 12%;
-    }
+#navigation:hover span:nth-of-type(2n){
+    transform: translate(-30px, 0px);
 }
 
 @media screen and (min-width: 1200px) {
-    #menu-toggle{
-        width: 60px;
-        height: 60px;
-        margin-left: 92%; /*must be positioned by right side*/
-        margin-top: 7.5%;
+    #navigation, .sandwich{
+        width: 65px;
+        height: 65px;
     }
 }
