--- a/style/components/menu.css
+++ b/style/components/menu.css
@@ -1,3 +1,4 @@
+/*format props by priority*/
 #navigation{
     width: 50px;
     height: 50px;
@@ -14,23 +15,23 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 50px;
-    height: 50px;
+    width: 50px;/*redundant values - sandwich in this case always will be the same size as container*/
+    height: 50px;/*implement: width: 100%; height: 100%*/
 }
 
-#navigation .sandwich span{
+#navigation .sandwich span{ /*you will be have additional sandwich?; use only .sandwich */
     width: 60%;
-    height: 1.25px;
+    height: 1.25px; /*in different browsers will be rendered differently; use exact value*/
     background:#b4b4b4;
     transition: transform 2s ease;
 }
 
-#navigation:hover span:nth-of-type(2n+1){
-    transform: translate(25px, 0px);
+#navigation:hover span:nth-of-type(2n+1){ /*spans relative to sandwich*/
+    transform: translate(25px, 0px);/*use translateX*/
 }
 
 #navigation:hover span:nth-of-type(2n){
-    transform: translate(-30px, 0px);
+    transform: translate(-30px, 0px); /*25 / -30 why different values?*/
 }
 
 @media screen and (min-width: 1200px) {
