--- a/style/components/menu.css
+++ b/style/components/menu.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-self: flex-end;
-    top: 44.5%;
+    top: 44.5%; /*use fixed values in px for mobile and desktop*/
     position: absolute;
 }
 
