--- a/style/components/menu.css
+++ b/style/components/menu.css
@@ -1,13 +1,13 @@
 /*format props by priority*/
 #navigation{
-    width: 50px;
-    height: 50px;
-    border: 1px solid #454545;
     display: flex;
     flex-direction: column;
     align-self: flex-end;
-    top: 44.5%; /*use fixed values in px for mobile and desktop*/
     position: absolute;
+    width: 50px;
+    height: 50px;
+    top: 140px;
+    border: 1px solid #454545;
 }
 
 .sandwich{
@@ -15,28 +15,29 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 50px;/*redundant values - sandwich in this case always will be the same size as container*/
-    height: 50px;/*implement: width: 100%; height: 100%*/
+    width: 100%;
+    height: 100%;
 }
 
-#navigation .sandwich span{ /*you will be have additional sandwich?; use only .sandwich */
+.sandwich span{
     width: 60%;
-    height: 1.25px; /*in different browsers will be rendered differently; use exact value*/
+    height: 1px;
     background:#b4b4b4;
     transition: transform 2s ease;
 }
 
-#navigation:hover span:nth-of-type(2n+1){ /*spans relative to sandwich*/
-    transform: translate(25px, 0px);/*use translateX*/
+.sandwich:hover span:nth-of-type(2n+1){
+    transform: translateX(25px);
 }
 
-#navigation:hover span:nth-of-type(2n){
-    transform: translate(-30px, 0px); /*25 / -30 why different values?*/
+.sandwich:hover span:nth-of-type(2n){
+    transform: translateX(-25px);
 }
 
 @media screen and (min-width: 1200px) {
-    #navigation, .sandwich{
+    #navigation{
         width: 65px;
         height: 65px;
+        top: 203px;
     }
 }
