--- a/style/components/fonts.css
+++ b/style/components/fonts.css
@@ -1,24 +1,35 @@
+/*TODO: rework by next scheme:*/
+@font-face {
+    font-family: 'Ubuntu';
+    src: url('../../fonts/ubuntu/Ubuntu-Light.ttf');
+    font-weight: 300; /*400, 500, 700*/
+    font-style: normal; /* can be italic*/
+}
+
+/*next font face*/
+
 @font-face{
     font-family: Ubuntu-Light;
-    src: url('../../fonts/ubuntu/Ubuntu-Light.ttf') format("truetype");
+    src: url('../../fonts/ubuntu/Ubuntu-Light.ttf') format("truetype");/*300*/
 }
 @font-face{
     font-family: Ubuntu-Medium;
-    src: url('../../fonts/ubuntu/Ubuntu-Medium.ttf') format("truetype");
+    src: url('../../fonts/ubuntu/Ubuntu-Medium.ttf') format("truetype");/*500*/
 }
 @font-face{
     font-family: Ubuntu-MediumItalic;
-    src: url('../../fonts/ubuntu/Ubuntu-MediumItalic.ttf') format("truetype");
+    src: url('../../fonts/ubuntu/Ubuntu-MediumItalic.ttf') format("truetype"); /*500*/
 }
 @font-face{
     font-family: Ubuntu-Regular;
-    src: url('../../fonts/ubuntu/Ubuntu-Regular.ttf') format("truetype");
+    src: url('../../fonts/ubuntu/Ubuntu-Regular.ttf') format("truetype"); /*400*/
 }
+/**/
 @font-face{
     font-family: PlayfairDisplaySC-Bold;
-    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Bold.ttf') format("truetype");
+    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Bold.ttf') format("truetype");/*700*/
 }
 @font-face{
     font-family: PlayfairDisplaySC-Regular;
-    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Regular.ttf') format("truetype");
+    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Regular.ttf') format("truetype");/*400*/
 }
