--- a/style/style.css
+++ b/style/style.css
@@ -4,5 +4,7 @@
 @import "components/fonts.css";
 @import "components/porfolio.css";
 @import "components/menu.css";
+@import "components/feedbacks.css";
+@import "components/contsct-us.css";
 
 
