--- a/style/components/fonts.css
+++ b/style/components/fonts.css
@@ -6,30 +6,44 @@
     font-style: normal; /* can be italic*/
 }
 
-/*next font face*/
-
 @font-face{
     font-family: Ubuntu-Light;
-    src: url('../../fonts/ubuntu/Ubuntu-Light.ttf') format("truetype");/*300*/
+    src: url('../../fonts/ubuntu/Ubuntu-Light.ttf');
+    font-weight: 300;
+    font-style: normal;
 }
+
 @font-face{
     font-family: Ubuntu-Medium;
-    src: url('../../fonts/ubuntu/Ubuntu-Medium.ttf') format("truetype");/*500*/
+    src: url('../../fonts/ubuntu/Ubuntu-Medium.ttf');
+    font-weight: 500;
+    font-style: normal;
 }
+
 @font-face{
     font-family: Ubuntu-MediumItalic;
-    src: url('../../fonts/ubuntu/Ubuntu-MediumItalic.ttf') format("truetype"); /*500*/
+    src: url('../../fonts/ubuntu/Ubuntu-MediumItalic.ttf');
+    font-weight: 500;
+    font-style: italic;
 }
-@font-face{
+
+@font-face {
     font-family: Ubuntu-Regular;
-    src: url('../../fonts/ubuntu/Ubuntu-Regular.ttf') format("truetype"); /*400*/
+    src: url('../../fonts/ubuntu/Ubuntu-Regular.ttf');
+    font-weight: 400;
+    font-style: normal;
 }
-/**/
+
 @font-face{
     font-family: PlayfairDisplaySC-Bold;
-    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Bold.ttf') format("truetype");/*700*/
+    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Bold.ttf');
+    font-weight: 700;
+    font-style: normal;
 }
+
 @font-face{
     font-family: PlayfairDisplaySC-Regular;
-    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Regular.ttf') format("truetype");/*400*/
+    src: url('../../fonts/playfairsc/PlayfairDisplaySC-Regular.ttf');
+    font-weight: 400;
+    font-style: normal;
 }
