--- a/style/components/feedbacks.css
+++ b/style/components/feedbacks.css
@@ -1,11 +1,6 @@
 #feedbacks{
     display: flex;
     flex-direction: column;
-    margin-top: 14%;
-}
-
-#feedbacks h2{
-    margin-bottom: 34px;
 }
 
 .feedbacks-item{
@@ -14,6 +9,7 @@
     align-items: center;
     height: 256px;
     width: 100%;
+    margin-bottom: 25px;
 }
 
 .people{
@@ -28,6 +24,7 @@
 .people p{
     font-size: 17px;
     text-align: justify;
+    letter-spacing: 0.3px;
 }
 
 .feedbacks-item h3{
@@ -36,6 +33,7 @@
     justify-content: center;
     width: 100%;
     font-size: 23px;
+    font-weight: 300;
     color: #b69b67;
 }
 
@@ -43,6 +41,7 @@
     content: "";
     position: absolute;
     width: 100%;
+    margin-top: -7px;
     border-bottom: 1px solid #b69b67;
 }
 
@@ -50,8 +49,10 @@
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    height: 50px;
-    font-size: 15px;
+    margin-top: -10px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    cursor: pointer;
 }
 
 #feedbacks span:hover{
@@ -70,9 +71,8 @@
     }
 
     .people p{
-        font-size: 20px;
-        text-align: justify;
-        padding-left: 23px;
+        font-size: 23px;
+        padding-left: 17px;;
     }
 
     .feedbacks-item h3{
@@ -88,10 +88,36 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        width: 50%;
+        width: 48%;
     }
 
     .feedbacks-item {
-        height: 200px;
+       height: 200px;
+    }
+
+    .people p{
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    #feedbacks{
+        height: 709px;
+    }
+
+    .feedbacks-item {
+        height: 184px;
+    }
+
+    .people img{
+        width: 13%;
+    }
+
+    .people p{
+        font-size: 23px;
+    }
+
+    .feedbacks-item h3::after{
+        margin-top: -13px;
     }
 }
