--- a/style/components/contsct-us.css
+++ b/style/components/contsct-us.css
@@ -1,38 +1,38 @@
 #contact-us{
+    position: relative;
     display: flex;
     flex-direction: column;
-    margin-top: 14%;
 }
 
 #contact-us h2{
-    margin-bottom: 10%;
+    margin-bottom: 5%;
 }
 
 #contact-us form{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    height: 325px;
 }
 
 #contact-us form input{
     height: 40px;
-    width: 80%;
+    width: 100%;
     padding-left: 10px;
+    margin-bottom: 22px;
     background: transparent;
     border: 1px solid #454545;
-    font: 15px Ubuntu-Light;
+    font-size: 15px;
 }
 
 #message{
-    height: 140px;
-    width: 80%;
+    height: 237px;
+    width: 100%!important;
     padding-left: 10px;
     padding-top: 10px;
+    margin-bottom: 20px;
     background: transparent;
     border: 1px solid #454545;
-    font: 15px Ubuntu-Light;
+    font-size: 15px;
 }
 
 #submit{
@@ -40,12 +40,13 @@
     justify-content: center;
     align-items: center;
     width: 50%;
-    height: 40px;
+    height: 57px;
     background: #b69b67;
     border: 1px solid #b69b67;
-    font: 17px Ubuntu-Light;
-    font-weight: 800;
+    font-size: 23px;
+    font-weight: 500;
     color: #454545;
+    cursor: pointer;
 }
 
 #submit:hover{
@@ -54,17 +55,13 @@
     color: #b69b67;
 }
 
-.wrap-img{
-    position: relative;
-
-}
-.wrap-img img{
+#contact-us img{
     position: absolute;
-    width: 51%;
-    right: -12%;
-    top: -61px;
+    width: auto;
+    bottom: 0;
+    right: 0;
     z-index: -16;
-    opacity: 0.5;
+    opacity: 0.25;
 }
 
 @media screen and (min-width: 576px) {
@@ -76,42 +73,25 @@
         width: 70%;
     }
 
-    .wrap-img{
-        width: 100%;
-    }
 }
 
 @media screen and (min-width: 992px) {
     #contact-us {
         flex-wrap: wrap;
-        width: 48%;
+        width: 50%;
     }
 
     #contact-us form{
-        align-items: flex-end;
-        width: 100%;
-        height: 400px;
+        width: 68%;
     }
 
     #contact-us form input{
-        height: 50px;
+        height: 55px;
     }
 
     #submit{
-        width: 38%;
-        align-self: center;
-        margin-left: 25%;
+        width: 44%;
     }
 
-    .wrap-img img{
-        width: 70%;
-        right: -29%;
-        top: -83px;
-    }
 }
 
-@media screen and (min-width: 1200px) {
-    #contact-us{
-        margin-bottom: -9%;
-    }
-}
