--- a/style/components/contsct-us.css
+++ b/style/components/contsct-us.css
@@ -26,7 +26,9 @@
 
 #message{
     height: 237px;
-    width: 100%!important;
+    resize: none;/*if you want to disable resizing */
+    /*resize: vertical;*/ /*or you can use only vertical/horizontal resizing*/
+    width: 100%; /*now not need to use important*/
     padding-left: 10px;
     padding-top: 10px;
     margin-bottom: 20px;
@@ -35,11 +37,13 @@
     font-size: 15px;
 }
 
+
+/*use only padding without flex and dimensions*/
 #submit{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 50%;/*there is no need for button make relative width */
     height: 57px;
     background: #b69b67;
     border: 1px solid #b69b67;
@@ -53,6 +57,7 @@
     background: transparent;
     border: 1px solid #454545;
     color: #b69b67;
+    /*add transition*/
 }
 
 #contact-us img{
@@ -60,7 +65,7 @@
     width: auto;
     bottom: 0;
     right: 0;
-    z-index: -16;
+    z-index: -16;/*what it means?*/
     opacity: 0.25;
 }
 
